# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
  "googletest_macro",
  "googletest",
]

[package]
name = "googletest-rust"
version = "0.1.0"
edition = "2018"
description = "A Rust binding to Google Test"
repository = "https://github.com/google/googletest-rust"
license = "Apache-2.0"

[badges]
travis-ci = { repository = "google/googletest-rust" }
codecov = { repository = "google/googletest-rust" }

[dependencies]
googletest = { version = "0.9.0", default-features = false }

[[bin]]
name = "example1"
path = "examples/example1.rs"

[[bin]]
name = "example2"
path = "examples/example2.rs"
