# Copyright 2022 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "googletest_macro"
version = "0.12.0"
keywords = ["unit", "matcher", "testing", "assertions"]
categories = ["development-tools", "development-tools::testing"]
description = "Procedural macros for GoogleTest Rust"
repository = "https://github.com/google/googletest-rust"
license = "Apache-2.0"
edition = "2021"
authors = [
  "Bradford Hovinen <hovinen@google.com>",
]

[dependencies]
quote = "1.0.33"
syn = {version = "2.0.82", features = ["full"]}
proc-macro2 = "1.0.85"

[lib]
name = "googletest_macro"
proc-macro = true
